[package]
name = "snowgoggles"
version = "0.1.1"
authors = ["june wilde <jewilde@rosegardencult.com>"]
description = "rendering for warmth"
license = "MPL-2.0"
keywords = ["warmth"]
homepage = "https://github.com/rosegardencult/snowgoggles"
repository = "https://github.com/rosegardencult/snowgoggles"
readme = "README.md"
edition = "2018"

[dependencies]

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]
